%% Elixir v5 — Domain 4: WAR / RIVER RACE + TOURNAMENTS
%% War is 6 tables (current state, races, per-member participation/day status,
%% raw snapshots, per-period clan status). Note war_participant_snapshots is a
%% raw time-series that largely overlaps war_participation + war_day_status.
%% Tournaments is a clean 3-table star.
erDiagram
    members {
        int member_id PK
        text player_tag UK
    }
    war_current_state {
        int war_id PK
        text war_state
        int clan_score
    }
    war_races {
        int war_race_id PK
        int season_id
        int section_index
        int our_rank
    }
    war_participation {
        int participation_id PK
        int war_race_id FK
        int member_id FK
        text player_tag
        int fame
    }
    war_day_status {
        int status_id PK
        int member_id FK
        text battle_date
        int decks_used_today
    }
    war_participant_snapshots {
        int snapshot_id PK
        int member_id FK
        text war_day_key
        text player_tag
        text raw_json "raw time-series"
    }
    war_period_clan_status {
        int status_id PK
        int season_id
        int period_index
        text clan_tag
    }
    tournaments {
        int tournament_id PK
        text tournament_tag UK
        text status
    }
    tournament_participants {
        int participant_id PK
        int tournament_id FK
        int member_id FK
        text player_tag
    }
    tournament_battles {
        int tournament_battle_id PK
        int tournament_id FK
        int player1_member_id FK
        int player2_member_id FK
    }

    war_races ||--o{ war_participation : "participants"
    members ||--o{ war_participation : "as member"
    members ||--o{ war_day_status : "daily"
    members ||--o{ war_participant_snapshots : "snapshots"
    tournaments ||--o{ tournament_participants : "entrants"
    tournaments ||--o{ tournament_battles : "battles"
    members ||--o{ tournament_participants : "plays"
    members ||--o{ tournament_battles : "p1/p2"
